# GameEngine

GameEngineCore/: CMakeLists.txt  CMakeLists.txt.bak
GameEngineCore/includes/GameEngineCore/: Application.hpp  Camera.hpp
GameEngineEditor/: CMakeLists.txt  CMakeLists.txt.bak
GameEngineEditor/src/: main.cpp
